crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_sentence_wrap_list_blockquote.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..116
  LIST@0..66
    LIST_ITEM@0..66
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..66
        TEXT@2..65 "First item sentence.  ..."
        NEWLINE@65..66 "\n"
  BLANK_LINE@66..67
    BLANK_LINE@66..67 "\n"
  BLOCK_QUOTE@67..116
    BLOCK_QUOTE_MARKER@67..68 ">"
    WHITESPACE@68..69 " "
    PARAGRAPH@69..116
      TEXT@69..115 "Quoted first sentence ..."
      NEWLINE@115..116 "\n"
