crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_sentence_wrap_quote_multisentence.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..82
  PARAGRAPH@0..82
    TEXT@0..81 "\"She knocked on the d ..."
    NEWLINE@81..82 "\n"
