crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_sentence_wrap_table_caption.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..218
  PIPE_TABLE@0..218
    TABLE_HEADER@0..21
      TEXT@0..1 "|"
      WHITESPACE@1..2 " "
      TABLE_CELL@2..9
        TEXT@2..9 "Feature"
      WHITESPACE@9..10 " "
      TEXT@10..11 "|"
      WHITESPACE@11..12 " "
      TABLE_CELL@12..18
        TEXT@12..18 "Status"
      WHITESPACE@18..19 " "
      TEXT@19..20 "|"
      NEWLINE@20..21 "\n"
    TABLE_SEPARATOR@21..31
      TABLE_SEP_DELIM@21..22 "|"
      TABLE_SEP_DASHES@22..25 "---"
      TABLE_SEP_DELIM@25..26 "|"
      TABLE_SEP_DASHES@26..29 "---"
      TABLE_SEP_DELIM@29..30 "|"
      NEWLINE@30..31 "\n"
    TABLE_ROW@31..66
      TEXT@31..32 "|"
      WHITESPACE@32..33 " "
      TABLE_CELL@33..49
        TEXT@33..49 "Caption wrapping"
      WHITESPACE@49..50 " "
      TEXT@50..51 "|"
      WHITESPACE@51..52 " "
      TABLE_CELL@52..63
        TEXT@52..63 "Implemented"
      WHITESPACE@63..64 " "
      TEXT@64..65 "|"
      NEWLINE@65..66 "\n"
    BLANK_LINE@66..67
      BLANK_LINE@66..67 "\n"
    TABLE_CAPTION@67..218
      TABLE_CAPTION_PREFIX@67..74 "Table: "
      TEXT@74..217 "This is the first lon ..."
      NEWLINE@217..218 "\n"
