crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_setext_multiline_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..12
  PARAGRAPH@0..12
    TEXT@0..3 "Foo"
    NEWLINE@3..4 "\n"
    TEXT@4..7 "Bar"
    NEWLINE@7..8 "\n"
    TEXT@8..11 "---"
    NEWLINE@11..12 "\n"
